--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_GTM =
 NEXT_PUBLIC_APP_URL = 
-TELEGRAM_BOT_TOKEN = 
+TELEGRAM_BOT_TOKEN = "7628347461:AAHIJEZ8b5zzqcBbp49VKFwUrpH0iwG32Gw"
 TELEGRAM_CHAT_ID = 
-GMAIL_PASSKEY = 
-EMAIL_ADDRESS =
+GMAIL_PASSKEY =  "evkn fznc uyii payp"
+EMAIL_ADDRESS = "pythonwithmathi@gmail.com"
